--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>firstgroup</title>
+    <script type="text/javascript">
+      document.documentElement.style.fontSize = document.documentElement.clientWidth / 100 * 26.67 + "px";
+    </script>
   </head>
   <body>
     <div id="app"></div>
