--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     </script>
     <link rel="stylesheet" href="./static/css/reset.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.0.2/css/swiper.css">
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
